manifests/namespaces.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: api1
---
apiVersion: v1
kind: Namespace
metadata:
  name: api2
---
apiVersion: v1
kind: Namespace
metadata:
  name: edge
